# quant-knowledge-base

./: .gitignore  LICENSE  QUANT_SECOND_BRAIN.md  README.md  benchmark_results.md  benchmark_results.txt  benchmark_suite.json  main.py  pyproject.toml  requirements.txt  skills-lock.json
.agents/skills/quant-second-brain/: SKILL.md
data/metadata/: catalog.json  catalog.jsonl
data/parsed/algo_trading_general/: 0704.2259_the_wiretap_channel_with_feedback_encryption_over_.json  0704.2259_the_wiretap_channel_with_feedback_encryption_over_.md  0705.2820_entropy_oriented_trading_a_trading_strategy_based_.json  0705.2820_entropy_oriented_trading_a_trading_strategy_based_.md  0707.0479_precoding_for_the_awgn_channel_with_discrete_inter.json  0707.0479_precoding_for_the_awgn_channel_with_discrete_inter.md  0710.1439_trading_activity_as_driven_poisson_process_compari.json  0710.1439_trading_activity_as_driven_poisson_process_compari.md  0711.2245_on_approximation_of_quantum_channels.json  0711.2245_on_approximation_of_quantum_channels.md  0712.1275_continuous_time_trading_and_emergence_of_randomnes.json  0712.1275_continuous_time_trading_and_emergence_of_randomnes.md  (+258 more)
doc/: security_best_practices_report.md
graphify-out/: .graphify_detect.json  .graphify_python  GRAPH_REPORT.md
graphify-out/wiki/: community_0.md  community_1.md  community_10.md  community_100.md  community_101.md  community_102.md  community_103.md  community_104.md  community_105.md  community_106.md  community_107.md  community_108.md  community_109.md  community_11.md  community_110.md  community_111.md  community_112.md  community_113.md  community_114.md  community_115.md  community_116.md  community_117.md  community_118.md  community_119.md  community_12.md  community_120.md  community_121.md  community_122.md  community_123.md  community_124.md  community_125.md  community_126.md  community_127.md  community_128.md  community_129.md  community_13.md  community_130.md  community_131.md  community_132.md  community_133.md  (+818 more)
pdf2yaml/: __init__.py  cli.py  extract.py  models.py  pipeline.py  render.py  transform.py
pdfmd/: __init__.py  cli.py  extract.py  pipeline.py  utils.py
scripts/: check_paper.py  create_benchmark.py  quant_brain_cli.py  run_benchmark.py
src/research_paper_knowledge/: __init__.py  parser.py
tests/: __init__.py  inspect_1104_raw.txt  modern_paradigm_comparison.txt  protocol_channels.md  protocol_channels_raw.txt  test_build_quant_db.py  test_build_quant_graph.py  test_cli.py  test_math_and_tables.py  test_models.py  test_parser.py  test_pipeline.py  test_quant_brain_cli.py
(+3022 files in other folders)
