[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2yaml"
version = "1.0.0"
description = "Fast, local, privacy-first PDF to YAML converter with OCR, multi-language support, table detection, and math preservation for AI pipelines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Michael Neivandt & Antigravity AI"}
]
keywords = [
    "pdf", 
    "yaml", 
    "converter", 
    "ocr", 
    "tesseract", 
    "tables", 
    "math", 
    "latex",
    "privacy",
    "offline",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pymupdf>=1.28.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.13",
    "Pillow>=12.3.0",
]
ocrmypdf = [
    "pytesseract>=0.3.13",
    "Pillow>=12.3.0",
    "ocrmypdf>=17.8.0",
]
full = [
    "pytesseract>=0.3.13",
    "Pillow>=12.3.0",
    "ocrmypdf>=17.8.0",
    "tiktoken>=0.7.0",
]
dev = [
    "pytest>=9.0.0",
    "black>=26.0.0",
    "flake8>=7.0.0",
    "mypy>=2.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
pdf2yaml = "pdf2yaml.cli:main"

[tool.setuptools]
packages = ["pdf2yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"